--- a/Piggi/package.json
+++ b/Piggi/package.json
@@ -10,20 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.3",
     "@react-native/new-app-screen": "0.80.2",
-    "@react-navigation/bottom-tabs": "^7.4.4",
-    "@react-navigation/native": "^7.1.16",
+    "@react-navigation/bottom-tabs": "^7.4.5",
+    "@react-navigation/native": "^7.1.17",
+    "@shopify/react-native-skia": "^2.1.1",
+    "lucide-react-native": "^0.536.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-gesture-handler": "^2.27.2",
-    "react-native-reanimated": "^3.19.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "^15.12.1",
+    "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.4.1",
     "react-navigation": "^5.0.0",
-    "victory-native": "^41.17.4",
-    "zustand": "^5.0.6"
+    "victory-native": "^41.18.0",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
