--- a/Piggi/package.json
+++ b/Piggi/package.json
@@ -14,11 +14,13 @@
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.24",
     "@shopify/react-native-skia": "^2.1.1",
     "lucide-react-native": "^0.536.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "^4.0.1",
     "react-native-safe-area-context": "^5.5.2",
@@ -44,6 +46,7 @@
     "@react-native/typescript-config": "0.80.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
